test/should-fail/==写成=.j
function test takes nothing returns nothing
    local boolean x
    local boolean y
    local boolean b = x = y
endfunction